tests/fixtures/invalid/set_div_bytes.py
# Cannot divide Set[int] and Bytes
x: float = {1, 2, 3} / b"hello"
